--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG 
 
 log4j.appender.Stdout = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.Stdout.File = E://logs/log.log  
+log4j.appender.Stdout.File = C://logs/log.log  
 log4j.appender.Stdout.Append = true  
 log4j.appender.Stdout.Threshold = DEBUG   
 log4j.appender.Stdout.layout = org.apache.log4j.PatternLayout  
