--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
 log4j.rootLogger=DEBUG,Console,Stdout
+log4j.logger.org.springframework.scheduling=INFO
 
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
