--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/express?useUnicode=true&amp;characterEncoding=UTF-8&allowMultiQueries=true
+jdbc_url=jdbc:mysql://localhost:3306/express?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 jdbc_username=root
 jdbc_password=abcd1234
 jdbc_initialSize=10
