--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<!-- spring版本号 -->
 		<spring.version>4.1.6.RELEASE</spring.version>
 		<!-- mybatis版本号 -->
-		<mybatis.version>3.2.8</mybatis.version>
+		<mybatis.version>3.3.0</mybatis.version>
 		<!-- log4j日志文件管理包版本 -->
 		<slf4j.version>1.7.7</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -258,6 +258,12 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.0.1</version>
 		</dependency>
 
 	</dependencies>
